--- a/index.html
+++ b/index.html
@@ -15,61 +15,64 @@
     </style>
   </head>
   <body class="is-preload">
+    <!-- Élément de fond requis par le CSS -->
+    <div id="bg"></div>
 
     <!-- Wrapper -->
-      <div id="wrapper">
+    <div id="wrapper">
 
-        <!-- Header -->
-          <header id="header">
-            <img id="logo-cosmo" src="images/Logo-Cosmo-lyo--complet-w.png" alt="Logo Cosmo Lyo" />
-            <h1>Cosmo Lyo</h1>
-            <p>Fais de l’espace dans ton lunch</p>
-            <nav>
-              <ul>
-                <li><a href="#produits">Produits</a></li>
-                <li><a href="#apropos">À propos</a></li>
-                <li><a href="#contact">Contact</a></li>
-              </ul>
-            </nav>
-          </header>
+      <!-- Header -->
+      <header id="header">
+        <img id="logo-cosmo" src="images/Logo-Cosmo-lyo--complet-w.png" alt="Logo Cosmo Lyo" />
+        <h1>Cosmo Lyo</h1>
+        <p>Fais de l’espace dans ton lunch</p>
+        <nav>
+          <ul>
+            <li><a href="#produits">Produits</a></li>
+            <li><a href="#apropos">À propos</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
 
-        <!-- Main -->
-          <div id="main">
+      <!-- Main -->
+      <div id="main">
 
-            <!-- Produits -->
-              <article id="produits">
-                <h2 class="major">Produits</h2>
-                <p>Nos fruits lyophilisés croquants, nos bonbons interstellaires et nos collations cosmiques sont faits pour faire voyager vos papilles. Que ce soit pour l'école, le bureau ou le sport, Cosmo Lyo vous propulse dans l’univers du bon goût… sans gravité !</p>
-              </article>
+        <!-- Produits -->
+        <article id="produits">
+          <h2 class="major">Produits</h2>
+          <p>Nos fruits lyophilisés croquants, nos bonbons interstellaires et nos collations cosmiques sont faits pour faire voyager vos papilles. Que ce soit pour l'école, le bureau ou le sport, Cosmo Lyo vous propulse dans l’univers du bon goût… sans gravité !</p>
+        </article>
 
-            <!-- À propos -->
-              <article id="apropos">
-                <h2 class="major">À propos</h2>
-                <p>Cosmo Lyo est une entreprise québécoise qui lyophilise des produits alimentaires pour en faire des collations saines, amusantes et durables. Nous croyons qu’on peut explorer de nouveaux formats alimentaires tout en gardant la qualité et la joie au centre de l’expérience.</p>
-              </article>
+        <!-- À propos -->
+        <article id="apropos">
+          <h2 class="major">À propos</h2>
+          <p>Cosmo Lyo est une entreprise québécoise qui lyophilise des produits alimentaires pour en faire des collations saines, amusantes et durables. Nous croyons qu’on peut explorer de nouveaux formats alimentaires tout en gardant la qualité et la joie au centre de l’expérience.</p>
+        </article>
 
-            <!-- Contact -->
-              <article id="contact">
-                <h2 class="major">Contact</h2>
-                <p>📦 Commandes : <a href="https://cosmolyo.square.site" target="_blank">cosmolyo.square.site</a><br />
-                ✉️ Écrivez-nous : <a href="mailto:info@cosmolyo.ca">info@cosmolyo.ca</a></p>
-              </article>
-
-          </div>
-
-        <!-- Footer -->
-          <footer id="footer">
-            <p class="copyright">&copy; Cosmo Lyo. Design basé sur <a href="https://html5up.net">HTML5 UP</a>.</p>
-          </footer>
+        <!-- Contact -->
+        <article id="contact">
+          <h2 class="major">Contact</h2>
+          <p>
+            📦 Commandes : <a href="https://cosmolyo.square.site" target="_blank">cosmolyo.square.site</a><br />
+            ✉️ Écrivez-nous : <a href="mailto:info@cosmolyo.ca">info@cosmolyo.ca</a>
+          </p>
+        </article>
 
       </div>
 
-    <!-- Scripts -->
-      <script src="assets/js/jquery.min.js"></script>
-      <script src="assets/js/browser.min.js"></script>
-      <script src="assets/js/breakpoints.min.js"></script>
-      <script src="assets/js/util.js"></script>
-      <script src="assets/js/main.js"></script>
+      <!-- Footer -->
+      <footer id="footer">
+        <p class="copyright">&copy; Cosmo Lyo. Design basé sur <a href="https://html5up.net">HTML5 UP</a>.</p>
+      </footer>
 
+    </div>
+
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
   </body>
 </html>
