--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <nav>
           <ul>
             <li><a href="#produits">Produits</a></li>
+            <li><a href="#carte">Carte</a></li> 
             <li><a href="#apropos">À propos</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -43,7 +44,21 @@
           <h2 class="major">Produits</h2>
           <p>Nos fruits lyophilisés croquants, nos bonbons interstellaires et nos collations cosmiques sont faits pour faire voyager vos papilles. Que ce soit pour l'école, le bureau ou le sport, Cosmo Lyo vous propulse dans l’univers du bon goût… sans gravité !</p>
         </article>
-
+        
+        <!-- Carte -->
+        <article id="carte">
+          <h2 class="major">Carte</h2>
+          <p>Voici notre carte Google Maps :</p>
+          <iframe 
+            src="https://www.google.com/maps/d/u/4/embed?mid=17DE_16B4mrWG4jMUMQqM4P1pAu3EENw&ehbc=2E312F&noprof=1"
+            width="640"
+            height="480"
+            style="border:0;"
+            allowfullscreen=""
+            loading="lazy">
+          </iframe>
+        </article>
+        
         <!-- À propos -->
         <article id="apropos">
           <h2 class="major">À propos</h2>
