--- a/index.html
+++ b/index.html
@@ -48,15 +48,13 @@
         <!-- Carte -->
         <article id="carte">
           <h2 class="major">Carte</h2>
-          <p>Voici notre carte Google Maps :</p>
-          <iframe 
-            src="https://www.google.com/maps/d/u/4/embed?mid=17DE_16B4mrWG4jMUMQqM4P1pAu3EENw&ehbc=2E312F&noprof=1"
-            width="640"
-            height="480"
-            style="border:0;"
-            allowfullscreen=""
-            loading="lazy">
-          </iframe>
+          <div class="map-container">
+            <iframe
+              src="https://www.google.com/maps/d/u/4/embed?mid=17DE_16B4mrWG4jMUMQqM4P1pAu3EENw&ehbc=2E312F&noprof=1"
+              allowfullscreen=""
+              loading="lazy">
+            </iframe>
+          </div>
         </article>
         
         <!-- À propos -->
