--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
           <h2 class="major">Carte</h2>
           <div class="map-container">
             <iframe
-              src="https://www.google.com/maps/d/u/4/embed?mid=17DE_16B4mrWG4jMUMQqM4P1pAu3EENw&ehbc=2E312F&noprof=1">
+              src="https://www.google.com/maps/d/u/4/embed?mid=17DE_16B4mrWG4jMUMQqM4P1pAu3EENw&ehbc=2E312F&noprof=1"
+              allowfullscreen
+              loading="lazy">
             </iframe>
           </div>
         </article>
