--- a/index.html
+++ b/index.html
@@ -42,9 +42,18 @@
         <!-- Produits -->
         <article id="produits">
           <h2 class="major">Produits</h2>
-          <p>Nos fruits lyophilisés croquants, nos bonbons interstellaires et nos collations cosmiques sont faits pour faire voyager vos papilles. Que ce soit pour l'école, le bureau ou le sport, Cosmo Lyo vous propulse dans l’univers du bon goût… sans gravité !</p>
-        </article>
+          <p>
+            Nos fruits lyophilisés croquants, nos bonbons interstellaires et nos collations cosmiques 
+            sont faits pour faire voyager vos papilles. Que ce soit pour l'école, le bureau ou le sport, 
+            Cosmo Lyo vous propulse dans l’univers du bon goût… sans gravité !
+          </p>
         
+          <!-- Image des produits -->
+          <span class="image main">
+            <img src="images/produits.jpg" alt="Aperçu de nos produits lyophilisés" />
+          </span>
+        </article>
+
         <!-- Carte -->
         <article id="carte">
           <h2 class="major">Carte</h2>
