--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <!-- À propos -->
         <article id="apropos">
           <h2 class="major">À propos</h2>
-          <p>Cosmo Lyo est une entreprise québécoise qui lyophilise des produits alimentaires pour en faire des collations saines, amusantes et durables. Nous croyons qu’on peut explorer de nouveaux formats alimentaires tout en gardant la qualité et la joie au centre de l’expérience.</p>
+          <p>Cosmo Lyo est une entreprise agroalimentaire innovante basée à Saguenay, spécialisée dans la lyophilisation de fruits et d’aliments locaux. Grâce à une maîtrise technologique de pointe — domotique, automatisation et procédés scientifiques rigoureux — nous transformons les récoltes d’ici en collations croustillantes, savoureuses et nutritives, sans additifs ni conservateurs. Notre gamme reconnue Aliments du Québec comprend notamment des fraises, framboises, bleuets sauvages et les populaires Boules Cosmo. En plus de notre offre au détail, nous soutenons la vitalité régionale grâce à des services de sous-traitance et de co-transformation pour les producteurs, restaurateurs et institutions. Nous croyons fermement que l’alimentation locale, saine et pratique peut rimer avec plaisir et durabilité. Cosmo Lyo, c’est une invitation à faire de l’espace dans ton lunch — tout en valorisant le terroir boréal.</p>
         </article>
 
         <!-- Contact -->
