--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <article id="contact">
           <h2 class="major">Contact</h2>
           <p>
-            📦 Commandes : <a href="https://cosmolyo.square.site" target="_blank">cosmolyo.square.site</a><br />
+            📦 Commandes HRI : <a href="https://cosmolyo.square.site" target="_blank">cosmolyo.square.site</a><br />
             ✉️ Écrivez-nous : <a href="mailto:info@cosmolyo.ca">info@cosmolyo.ca</a>
           </p>
         </article>
