--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
       }
     </style>
   </head>
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://cosmolyo.ca/" />
+  <meta property="og:title" content="Cosmo Lyo – Fais de l’espace dans ton lunch" />
+  <meta property="og:description" content="Cosmo Lyo: des collations lyophilisées saines, locales et savoureuses!" />
+  <meta property="og:image" content="https://cosmolyo.ca/images/preview.jpg" />
+  
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta property="twitter:domain" content="cosmolyo.ca" />
+  <meta property="twitter:url" content="https://cosmolyo.ca/" />
+  <meta name="twitter:title" content="Cosmo Lyo – Fais de l’espace dans ton lunch" />
+  <meta name="twitter:description" content="Cosmo Lyo: des collations lyophilisées saines, locales et savoureuses!" />
+  <meta name="twitter:image" content="https://cosmolyo.ca/images/preview.jpg" />
   <body class="is-preload">
     <!-- Élément de fond requis par le CSS -->
     <div id="bg"></div>
