--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <nav>
           <ul>
             <li><a href="#produits">Produits</a></li>
+            <li><a href="http://cosmolyo.square.site/" target="_blank" rel="noopener">Boutique</a></li>
             <li><a href="#carte">Carte</a></li> 
             <li><a href="#apropos">À propos</a></li>
             <li><a href="#contact">Contact</a></li>
