--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             Cosmo Lyo est un transformateur et distributeur. Notre mission est de nous assurer que les points de vente sont desservis en priorité. Si vous cherchez nos produits, consultez la section "Carte" et identifiez un détaillant près de chez vous.
           </p>
           <p>
-            📦 Commandes HRI : <a href="https://cosmolyo.square.site" target="_blank">cosmolyo.square.site</a><br />
+            📦 Commandes HRI : <a href="https://cosmolyo.square.site/shop/ventes-aux-petits-ambassadeurs/3L3RZFA7BPAQGXJTAHS4N52F" target="_blank">cosmolyo.square.site</a><br />
             ✉️ Écrivez-nous : <a href="mailto:info@cosmolyo.ca">info@cosmolyo.ca</a>
           </p>
         </article>
@@ -138,3 +138,4 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
